# iot-onion-remote-switch

./: .gitignore  .gitmodules  CMakeLists.txt  OnionConfig.h.in  README.md  appsettings.json  main.cpp
.github/workflows/: build.yaml  cmake.yml
src/: CMakeLists.txt  omega_config.cpp  omega_config.h  omega_device_methods.cpp  omega_device_methods.h
test/: CMakeLists.txt  omega_config_unittest.cpp  omega_device_methods_unittest.cpp
